--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ohdoki/handy-sdk": "^2.1.13",
     "@quasar/extras": "^1.0.0",
     "events": "^3.3.0",
+    "pinia-plugin-persistedstate": "^2.1.1",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
