no sttorag switch1

--- a/src-bex/manifest.json
+++ b/src-bex/manifest.json
@@ -83,8 +83,7 @@
     }
   ],
   "permissions": [
-    "storage",
-    "tabs"
+    "storage"
   ],
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self';"
