--- a/src-bex/manifest.json
+++ b/src-bex/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Handy browser extension",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Browser extension that allows videos to play in sync with your Handy",
   "icons": {
     "16": "icons/icon-16x16.png",
@@ -38,17 +38,6 @@
     },
     {
       "matches": [
-        "https://www.pornhub.com/view_video.php?viewkey=*",
-        "https://www.pornhub.com/embed/*"
-      ],
-      "all_frames": true,
-      "run_at": "document_idle",
-      "js": [
-        "pornhub-embed.js"
-      ]
-    },
-    {
-      "matches": [
         "http://localhost:9001/*",
         "http://localhost:9000/*",
         "https://index.handyfeeling.com/*",
@@ -60,8 +49,20 @@
     },
     {
       "matches": [
+        "https://www.pornhub.com/view_video.php?viewkey=*",
+        "https://www.pornhub.com/embed/*"
+      ],
+      "all_frames": true,
+      "run_at": "document_idle",
+      "js": [
+        "pornhub-embed.js"
+      ]
+    },
+    {
+      "matches": [
         "https://thebenefitmonkey.com/members/scenes/*"
       ],
+      "run_at": "document_idle",
       "js": [
         "benefit-monkey.js"
       ]
@@ -82,6 +83,16 @@
       "run_at": "document_idle",
       "js": [
         "youtube.js"
+      ]
+    },
+    {
+      "matches": [
+        "https://www.youtube.com/embed/*"
+      ],
+      "all_frames": true,
+      "run_at": "document_idle",
+      "js": [
+        "youtube-embed.js"
       ]
     }
   ],
